crates/hoocode-code-main/tests/snapshots/replay__json-basic.snap
---
source: crates/hoocode-code-main/tests/replay.rs
description: "recorded from hoocode a6cd96e7 by harness.py record; never accept hoocode output here"
expression: json-basic
---
## exit
0

## stdout (jsonl)
{"type":"session","version":3,"id":"<masked>","timestamp":"<masked>","cwd":"<WORK>"}
{"type":"agent_start"}
{"type":"turn_start"}
{"type":"message_start","message":{"role":"user","content":[{"type":"text","text":"read notes.txt"}],"timestamp":"<masked>"}}
{"type":"message_end","message":{"role":"user","content":[{"type":"text","text":"read notes.txt"}],"timestamp":"<masked>"}}
{"type":"message_start","message":{"role":"assistant","content":[],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"totalTokens":0,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>"}}
{"type":"message_update","assistantMessageEvent":{"type":"text_start","contentIndex":0,"partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"Let me r","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"ead it.","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_start","contentIndex":1,"partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":"","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":"{\"path\":","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":" \"notes.","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":"txt\", \"l","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":"imit\": 2","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_delta","contentIndex":1,"delta":"}","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_end","contentIndex":0,"content":"Let me read it.","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"toolcall_end","contentIndex":1,"toolCall":{"type":"toolCall","id":"call_read_1","name":"Read","arguments":{"path":"notes.txt","limit":2}},"partial":"<masked>"},"message":"<masked>"}
{"type":"message_end","message":{"role":"assistant","content":[{"type":"text","text":"Let me read it."},{"type":"toolCall","id":"call_read_1","name":"Read","arguments":{"path":"notes.txt","limit":2}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
{"type":"tool_execution_start","toolCallId":"call_read_1","toolName":"Read","args":{"path":"notes.txt","limit":2}}
{"type":"tool_execution_end","toolCallId":"call_read_1","toolName":"Read","result":{"content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}]},"isError":false}
{"type":"message_start","message":{"role":"toolResult","toolCallId":"call_read_1","toolName":"Read","content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}],"isError":false,"timestamp":"<masked>"}}
{"type":"message_end","message":{"role":"toolResult","toolCallId":"call_read_1","toolName":"Read","content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}],"isError":false,"timestamp":"<masked>"}}
{"type":"turn_end","message":{"role":"assistant","content":[{"type":"text","text":"Let me read it."},{"type":"toolCall","id":"call_read_1","name":"Read","arguments":{"path":"notes.txt","limit":2}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"},"toolResults":[{"role":"toolResult","toolCallId":"call_read_1","toolName":"Read","content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}],"isError":false,"timestamp":"<masked>"}]}
{"type":"turn_start"}
{"type":"message_start","message":{"role":"assistant","content":[],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"totalTokens":0,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>"}}
{"type":"message_update","assistantMessageEvent":{"type":"text_start","contentIndex":0,"partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"The file","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":" starts ","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"with alp","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"ha and b","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_delta","contentIndex":0,"delta":"eta.","partial":"<masked>"},"message":"<masked>"}
{"type":"message_update","assistantMessageEvent":{"type":"text_end","contentIndex":0,"content":"The file starts with alpha and beta.","partial":"<masked>"},"message":"<masked>"}
{"type":"message_end","message":{"role":"assistant","content":[{"type":"text","text":"The file starts with alpha and beta."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
{"type":"turn_end","message":{"role":"assistant","content":[{"type":"text","text":"The file starts with alpha and beta."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"},"toolResults":[]}
{"type":"agent_end","messages":[{"role":"user","content":[{"type":"text","text":"read notes.txt"}],"timestamp":"<masked>"},{"role":"assistant","content":[{"type":"text","text":"Let me read it."},{"type":"toolCall","id":"call_read_1","name":"Read","arguments":{"path":"notes.txt","limit":2}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"},{"role":"toolResult","toolCallId":"call_read_1","toolName":"Read","content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}],"isError":false,"timestamp":"<masked>"},{"role":"assistant","content":[{"type":"text","text":"The file starts with alpha and beta."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"}]}

## stderr


## session 1/1
{"type":"session","version":3,"id":"<id-1>","timestamp":"<masked>","cwd":"<WORK>"}
{"type":"model_change","id":"<id-2>","parentId":null,"timestamp":"<masked>","provider":"mock","modelId":"mock-model"}
{"type":"thinking_level_change","id":"<id-3>","parentId":"<id-2>","timestamp":"<masked>","thinkingLevel":"off"}
{"type":"message","id":"<id-4>","parentId":"<id-3>","timestamp":"<masked>","message":{"role":"user","content":[{"type":"text","text":"read notes.txt"}],"timestamp":"<masked>"}}
{"type":"message","id":"<id-5>","parentId":"<id-4>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"Let me read it."},{"type":"toolCall","id":"call_read_1","name":"Read","arguments":{"path":"notes.txt","limit":2}}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"toolUse","timestamp":"<masked>","responseId":"chatcmpl-mock"}}
{"type":"message","id":"<id-6>","parentId":"<id-5>","timestamp":"<masked>","message":{"role":"toolResult","toolCallId":"call_read_1","toolName":"Read","content":[{"type":"text","text":"alpha\nbeta\n\n[2 more lines in file. Use offset=3 to continue.]"}],"isError":false,"timestamp":"<masked>"}}
{"type":"message","id":"<id-7>","parentId":"<id-6>","timestamp":"<masked>","message":{"role":"assistant","content":[{"type":"text","text":"The file starts with alpha and beta."}],"api":"openai-completions","provider":"mock","model":"mock-model","usage":{"input":100,"output":20,"cacheRead":0,"cacheWrite":0,"totalTokens":120,"cost":{"input":0,"output":0,"cacheRead":0,"cacheWrite":0,"total":0}},"stopReason":"stop","timestamp":"<masked>","responseId":"chatcmpl-mock"}}